--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,3 +19,12 @@ jackson-datatype-jsr310 = { module="com.fasterxml.jackson.datatype:jackson-datat
 
 pearx-kasechange = { module = "net.pearx.kasechange:kasechange", version = "1.4.1" }
 
+
+kotest-bom = { module = "io.kotest:kotest-bom", version = "5.8.0" }
+kotest-assertions-core = { module = "io.kotest:kotest-assertions-core" }
+kotest-assertions-json = { module = "io.kotest:kotest-assertions-json" }
+kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest" }
+kotest-property = { module = "io.kotest:kotest-property" }
+kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5" }
+kotest-extensions-jvm = { module = "io.kotest:kotest-extensions-jvm" }
+kotest-extensions-arrow = { module = "io.kotest.extensions:kotest-assertions-arrow", version = "1.4.0" }
