--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@ description=CodeArtifact settings plugin for Gradle
 
 kotlin.code.style=official
 
-group = io.cloudshiftdev.codeartifact
+group=io.cloudshiftdev.codeartifact
+version=0.7.14
 
 org.gradle.jvmargs=-Dfile.encoding\=UTF-8
 org.gradle.vfs.watch=true
