--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,14 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: 'corretto'
+          java-version: 21
+          distribution: 'temurin'
 
       # https://github.com/gradle/actions/tree/main/setup-gradle
       - name: 'Set up Gradle'
         uses: 'gradle/actions/setup-gradle@31ae3562f68c96d481c31bc1a8a55cc1be162f83' # v3.4.1
         with:
           gradle-version: 'wrapper'
-          gradle-home-cache-includes: |-
-            jdks
-            caches
-            notifications
           gradle-home-cache-cleanup: 'true'
           validate-wrappers: true
 
