--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,11 @@
 [versions]
 
 [plugins]
+spotless = { id = "com.diffplug.spotless", version = "7.0.0.BETA2" }
+publish = { id = "com.gradle.plugin-publish", version = "1.2.2" }
 
 [libraries]
+ktfmt =  { module = "com.facebook.ktfmt:ktfmt", version = "0.52" }
 
 aws-sdk-kotlin-v1-bom = { module = "aws.sdk.kotlin:bom", version = "1.3.23" }
 aws-sdk-kotlin-v1-codeartifact = { module = "aws.sdk.kotlin:codeartifact" }
@@ -26,5 +29,5 @@ kotest-assertions-json = { module = "io.kotest:kotest-assertions-json" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest" }
 kotest-property = { module = "io.kotest:kotest-property" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5" }
-kotest-extensions-jvm = { module = "io.kotest:kotest-extensions-jvm" }
-kotest-extensions-arrow = { module = "io.kotest.extensions:kotest-assertions-arrow", version = "1.4.0" }
+
+mockk = { module = "io.mockk:mockk", version = "1.13.12" }
