--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,11 +3,11 @@
 [versions]
 
 [plugins]
-spotless = { id = "com.diffplug.spotless", version = "7.0.0.BETA4" }
+spotless = { id = "com.diffplug.spotless", version = "7.0.1" }
 publish = { id = "com.gradle.plugin-publish", version = "1.3.0" }
 
 [libraries]
-ktfmt =  { module = "com.facebook.ktfmt:ktfmt", version = "0.52" }
+ktfmt =  { module = "com.facebook.ktfmt:ktfmt", version = "0.53" }
 
 aws-sdk-kotlin-v1-bom = { module = "aws.sdk.kotlin:bom", version = "1.3.105" }
 aws-sdk-kotlin-v1-codeartifact = { module = "aws.sdk.kotlin:codeartifact" }
