--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 # Reference: https://docs.gradle.org/current/userguide/platforms.html
 
 [versions]
+okhttp = "5.0.0-alpha.14"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version = "7.0.3" }
@@ -22,10 +23,14 @@ jackson-datatype-jsr310 = { module="com.fasterxml.jackson.datatype:jackson-datat
 
 pearx-kasechange = { module = "net.pearx.kasechange:kasechange", version = "1.4.1" }
 
-okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version = "5.0.0-alpha.14" }
-okhttp = { module = "com.squareup.okhttp3:okhttp" }
-okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
-okhttp-brotli = { module = "com.squareup.okhttp3:okhttp-brotli" }
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref= "okhttp" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref= "okhttp" }
+okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref= "okhttp" }
+okhttp-brotli = { module = "com.squareup.okhttp3:okhttp-brotli", version.ref= "okhttp" }
+
+#okhttp = { module = "com.squareup.okhttp3:okhttp" }
+#okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
+#okhttp-brotli = { module = "com.squareup.okhttp3:okhttp-brotli" }
 
 kotest-bom = { module = "io.kotest:kotest-bom", version = "5.9.1" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core" }
