--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref= "okhttp"
 okhttp = { module = "com.squareup.okhttp3:okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 okhttp-brotli = { module = "com.squareup.okhttp3:okhttp-brotli" }
+okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver" }
 
 kotest-bom = { module = "io.kotest:kotest-bom", version = "5.9.1" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core" }
