--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  publsh:
     name: build
     runs-on: ubuntu-latest
     steps:
@@ -22,12 +22,12 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'temurin'
 
       # https://github.com/gradle/actions/tree/main/setup-gradle
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4.4.2
+        uses: 'gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3' # v4
 
         # https://github.com/gradle/actions/tree/main/dependency-submission
       - name: "Generate and submit dependency graph"
